--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_riverpod: ^2.4.5
   freezed_annotation: ^2.2.0
   json_annotation: ^4.9.0   
+  flutter_localization: ^0.3.3
 
 dev_dependencies:
   flutter_test:
