--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_riverpod: ^2.4.5
   freezed_annotation: ^2.2.0
-  json_annotation: ^4.9.0   
-  flutter_localization: ^0.3.3
+  json_annotation: ^4.9.0
+  flutter_localizations:
+    sdk: flutter
+ 
 
 dev_dependencies:
   flutter_test:
@@ -24,10 +26,11 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.5.4
   freezed: ^2.3.2
-  json_serializable: ^6.9.5   
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
+  generate: true
 
   fonts:
     - family: MaterialIcons
